@@ -19,6 +19,10 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 #include "UIDraw.hpp"
 
+UIDraw::~UIDraw()
+{
+}
+
 UIDraw *Screen = 0;
 
 
