@@ -1,3 +1,6 @@
+28-Nov-2003 by Matthias Braun
+-converted UI classes to use SDL_Surface
+
 26-Nov-2003 by Matthias Braun
 -made scrolling in tilesetview working correctly
 -template loading and saving in the editor should work now
